fix overflow issue on integration pages

--- a/src/assets/css/_page__integration--hero.scss
+++ b/src/assets/css/_page__integration--hero.scss
@@ -1,5 +1,6 @@
 .hero {
     position: relative;
+    overflow: hidden;
     background-color: #10091D;
 
     @media (max-width: 700px) {
